swen430as2/tests/valid/casts/Cast_Valid_04.while
int|bool f(int|bool|null i) {
    if(i == null) {
	return 0;
    } else {
	return (int|bool) i;
    }
}

void main() {
    assert f(1) == 1;
    assert f(true) == true;
    assert f(null) == 0;
}
