swen430as2/tests/invalid/unions/UnionType_Invalid_2-TC01.while
int|null f(int|bool x) {
    return x;
}
